--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-langchain==0.0.184
-PyPDF2==3.0.1
+langchain
 python-dotenv==1.0.0
 streamlit==1.18.1
 faiss-cpu==1.7.4
 altair==4
 tiktoken==0.4.0
 huggingface-hub==0.14.1
-llama-cpp-python
 transformers
+openai==0.27.6
