--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ streamlit==1.18.1
 faiss-cpu==1.7.4
 altair==4
 tiktoken==0.4.0
-huggingface-hub==0.14.1
+huggingface-hub
+huggingface_hub
 transformers
 openai==0.27.6
 pypdf
